# edx-analytics-pipeline

./: .analytics_credentials  .coveragerc  .gitignore  .isort.cfg  .pycodestyle  .travis.yml  AUTHORS  Dockerfile  MANIFEST.in  Makefile  README.md  TODO.txt  client.cfg  codecov.yml  docker-compose.yml  logging.cfg  nosetests.xml.orig  openedx.yaml  pylintrc  pytest.ini  setup.cfg  setup.py  tox.ini
.github/: pull_request_template.md
.github/workflows/: ci.yml
config/: devstack.cfg  docker.cfg  docker_test.cfg  local.cfg  luigi_docker.cfg  test.cfg
docker/hadoop_datanode/: Dockerfile
docker/hadoop_namenode/: Dockerfile
docker/hadoop_nodemanager/: Dockerfile
docker/hadoop_resourcemanager/: Dockerfile
docker/spark_master/: Dockerfile
docker/spark_worker/: Dockerfile
docs/source/: conf.py  faq.rst  gen_tasks.py  index.rst  luigi_sphinx.py  running_acceptance_tests_in_docker.rst  running_spark_tasks.rst  running_tasks.rst  troubleshooting_docker_analyticstack.rst
docs/source/_static/: style.css
edx/analytics/tasks/: __init__.py  answer_dist.py  answer_hive.py  calendar.py  calendar_task.py  canonicalization.py  clean_for_vertica.py  course.py  course_catalog.py  course_enroll.py  course_enrollment_summary.py  course_fact.py  course_list.py  course_structure.py  course_summary_enrollment.py  daily_enrollment_trends.py  data_deidentification.py  data_obfuscation.py  database_exports.py  database_imports.py  decorators.py  deidentification.py  elasticsearch_load.py  encrypt.py  enrollment_validation.py  enrollments.py  event_analysis.py  event_collocation.py  event_exports.py  event_exports_by_course.py  event_type_dist.py  events_deidentification.py  events_for_course.py  events_obfuscation.py  events_to_warehouse.py  fetch_transcriptions.py  grades.py  lms_courseware_link_clicked.py  load_internal.py  load_internal_reporting_certificates.py  (+40 more)
edx/analytics/tasks/common/: bigquery_extract.py  bigquery_load.py  elasticsearch_load.py  mapreduce.py  mysql_dump.py  mysql_load.py  pathutil.py  redshift_load.py  snowflake_load.py  spark.py  spark_helpers.py  sqoop.py  vertica_export.py  vertica_load.py
edx/analytics/tasks/data_api/: student_engagement.py  studentmodule_dist.py
edx/analytics/tasks/enterprise/: enterprise_course_enrollents.py  enterprise_course_runs.py  enterprise_customer_enrollments.py  enterprise_database_imports.py  enterprise_ecommerce_transactions.py  enterprise_engagement.py  enterprise_engagement_report.py  enterprise_enrollments.py  enterprise_enrollments_spark.py  enterprise_subsection_grades.py  enterprise_user.py  enterprise_user_enrollments.py
edx/analytics/tasks/export/: data_obfuscation.py  database_exports.py  event_exports.py  event_exports_by_course.py  events_obfuscation.py  obfuscation.py
edx/analytics/tasks/insights/: answer_dist.py  answer_hive.py  calendar_task.py  course_blocks.py  course_list.py  database_imports.py  enrollments.py  eventlog_conversion.py  location_per_course.py  module_engagement.py  problem_response.py  tags_dist.py  user_activity.py  video.py
edx/analytics/tasks/launchers/: __init__.py  deid_eval.py  local.py  monitor.py  obfuscate_eval.py  remote.py  s3util.py
edx/analytics/tasks/monitor/: characterize_events.py  enrollment_validation.py  mr_diff.py  overall_events.py  performance.py  tools.py  total_events_report.py
edx/analytics/tasks/programs/: program_reports.py
edx/analytics/tasks/reports/: adyen.py  cybersource.py  enrollments.py  enrollments_and_registrations_workflow_manifest.py  finance_reports.py  incremental_enrollments.py  invoices.py  orders_import.py  payment.py  paypal.py  reconcile.py  shopping_cart_import.py  total_enrollments.py  total_events_report.py
edx/analytics/tasks/tests/: __init__.py  config.py  map_reduce_mixins.py  opaque_key_mixins.py  target.py  test_answer_dist.py  test_calendar.py  test_canonicalization.py  test_clean_for_vertica.py  test_course_enroll.py  test_course_information.py  test_course_list.py  test_course_subjects.py  test_data_deidentification.py  test_data_obfuscation.py  test_database_exports.py  test_database_imports.py  test_elasticsearch_load.py  test_encrypt.py  test_enrollment_validation.py  test_enrollments.py  test_event_analysis.py  test_event_export_by_course.py  test_event_exports.py  test_event_type_dist.py  test_events_deidentification.py  test_events_obfuscation.py  test_extensions.py  test_grades.py  test_internal_reporting_database.py  test_lms_courseware_link_clicked.py  test_load_internal_reporting_events.py  test_location_per_course.py  test_mapreduce.py  test_module_engagement.py  test_mysql.py  test_pathutil.py  (+14 more)
gpg-keys/: daemon+2@edx.org  daemon+master@edx.org  daemon@edx.org  insecure_master_secret.key  insecure_secret.key  insecure_secret_2.key
jabPipelneEnv/: pip-selfcheck.json
requirements/: base.in  base.txt  constraints.txt  default.in  default.txt  dev.txt  docs.in  docs.txt  extra.txt  pip-tools.in  pip-tools.txt  pip.txt  pre.txt  test.in  test.txt
scripts/: bootstrap.sh  collect-hadoop-metrics.py  collect-hadoop-metrics.yaml.example  create_hive_history_sql.py  datanode.sh  debug_emr_logs.py  event_load_testing.py  event_load_testing_orig.py  foo.py  hadoop-docker-command.sh  hadoop.env  hive-site.xml.template  nodemanager.sh  provision.sh  provision.sql  report-build-stats.sh  resourcemanager.sh  run_acceptance.sh  testDate.py  test_student_engagement.py  test_student_engagement_remove_zero_code.py
scripts/snowflake/query_tests/: activity_engagement_time.sql  activity_engagement_time_vertica.sql  browser_share.sql  browser_share_bigquery.sql  discovery_metric.sql  enrollment_info.sql  enrollment_info_vertica.sql  finance_base.sql  finance_base_vertica.sql  funnel_info.sql  funnel_info_vertica.sql  identify.sql  mau.sql  stats_time_tables.sql
share/: README  boto.cfg  config_override.py  docker.py  docker.yml  ec2.ini  ec2.py  explicit_events.tsv  local_docker.sh  logging.cfg.j2  report.html  repos.yml  task.yml  xblock_obfuscation_config.yml
sphinx_source/: conf.py  gen_tasks.py  index.rst  luigi_sphinx.py
(+453 files in other folders)
