[metadata]
name = edx.analytics.tasks
description-file = README.md

[global]
setup-hooks = pbr.hooks.setup_hook

[pbr]
skip_authors = True
skip_changelog = True

[files]
packages =
    edx
data_files =
    share/edx.analytics.tasks = share/*

[entry_points]
console_scripts =
    launch-task = edx.analytics.tasks.launchers.local:main
    remote-task = edx.analytics.tasks.launchers.remote:main
    analyze-log = edx.analytics.tasks.launchers.analyze.main:analyze
    s3util = edx.analytics.tasks.launchers.s3util:main
    obfuscate-eval = edx.analytics.tasks.launchers.obfuscate_eval:main

edx.analytics.tasks =
    event-type-dist = edx.analytics.tasks.event_type_dist:PushToVerticaEventTypeDistributionTask
    enrollments-report = edx.analytics.tasks.reports.enrollments:EnrollmentsByWeek
    total-enrollments-report = edx.analytics.tasks.reports.total_enrollments:WeeklyAllUsersAndEnrollments
    inc-enrollments-report = edx.analytics.tasks.reports.incremental_enrollments:WeeklyIncrementalUsersAndEnrollments
    course-enroll = edx.analytics.tasks.course_enroll:CourseEnrollmentChangesPerDay
    enrollments_and_registrations_workflow-manifest = edx.analytics.tasks.reports.enrollments_and_registrations_workflow_manifest:EnrollmentsandRegistrationsWorkflow
    answer-dist = edx.analytics.tasks.answer_dist:AnswerDistributionPerCourse
    tags-dist = edx.analytics.tasks.tags_dist:TagsDistributionPerCourse
    sqoop-import = edx.analytics.tasks.sqoop:SqoopImportFromMysql
    dump-student-module = edx.analytics.tasks.database_exports:StudentModulePerCourseTask
    export-student-module = edx.analytics.tasks.database_exports:StudentModulePerCourseAfterImportWorkflow
    export-events = edx.analytics.tasks.event_exports:EventExportTask
    export-events-by-course = edx.analytics.tasks.event_exports_by_course:EventExportByCourseTask
    user-activity = edx.analytics.tasks.user_activity:CourseActivityWeeklyTask
    insert-into-table = edx.analytics.tasks.mysql_load:MysqlInsertTask
    database-import = edx.analytics.tasks.database_imports:ImportAllDatabaseTablesTask
    location-per-course = edx.analytics.tasks.location_per_course:LastCountryOfUser
    grade-dist = edx.analytics.tasks.studentmodule_dist:GradeDistFromSqoopToMySQLWorkflow
    enrollments = edx.analytics.tasks.enrollments:ImportEnrollmentsIntoMysql
    enrollment_validation = edx.analytics.tasks.enrollment_validation:CourseEnrollmentValidationTask
    calendar = edx.analytics.tasks.calendar_task:CalendarTableTask
    overall_events = edx.analytics.tasks.overall_events:TotalEventsDailyTask
    all_events_report = edx.analytics.tasks.reports.total_events_report:TotalEventsReportWorkflow
    noop = edx.analytics.tasks.performance:ParseEventLogPerformanceTask
    student_engagement = edx.analytics.tasks.student_engagement:StudentEngagementTask
    video = edx.analytics.tasks.video:InsertToMysqlAllVideoTask
    catalog = edx.analytics.tasks.course_catalog:CourseCatalogWorkflow
    load-d-user = edx.analytics.tasks.load_internal_reporting_user:LoadInternalReportingUserToWarehouse
    load-f-user-activity = edx.analytics.tasks.load_internal_reporting_user_activity:LoadInternalReportingUserActivityToWarehouse
    load-d-user-course = edx.analytics.tasks.load_internal_reporting_user_course:LoadUserCourseSummary
    load-d-country = edx.analytics.tasks.load_internal_reporting_country:LoadInternalReportingCountryToWarehouse
    load-d-certificates = edx.analytics.tasks.load_internal_reporting_certificates:LoadInternalReportingCertificatesToWarehouse
    load-warehouse = edx.analytics.tasks.load_warehouse:LoadWarehouseWorkflow
    orders = edx.analytics.tasks.reports.orders_import:OrderTableTask
    cybersource = edx.analytics.tasks.reports.cybersource:DailyPullFromCybersourceTask
    payment_reconcile = edx.analytics.tasks.reports.reconcile:ReconcileOrdersAndTransactionsTask
    paypal = edx.analytics.tasks.reports.paypal:PaypalTransactionsByDayTask
    ed_services_report = edx.analytics.tasks.reports.ed_services_financial_report:BuildEdServicesReportTask
    financial_reports  = edx.analytics.tasks.reports.finance_reports:BuildFinancialReportsTask
    engagement = edx.analytics.tasks.module_engagement:ModuleEngagementDataTask
    data_obfuscation   = edx.analytics.tasks.data_obfuscation:ObfuscatedCourseDumpTask
    events_obfuscation = edx.analytics.tasks.events_obfuscation:ObfuscateCourseEventsTask
    obfuscation = edx.analytics.tasks.obfuscation:ObfuscatedCourseTask
    push_to_vertica_lms_courseware_link_clicked = edx.analytics.tasks.lms_courseware_link_clicked:PushToVerticaLMSCoursewareLinkClickedTask
    load-course-catalog = edx.analytics.tasks.load_internal_reporting_course_catalog:PullCourseCatalogAPIData
    load-internal-database = edx.analytics.tasks.load_internal_reporting_database:ImportMysqlToVerticaTask
    run-vertica-sql-script = edx.analytics.tasks.run_vertica_sql_script:RunVerticaSqlScriptTask
    run-vertica-sql-scripts = edx.analytics.tasks.run_vertica_sql_scripts:RunVerticaSqlScriptTask

mapreduce.engine =
    hadoop = edx.analytics.tasks.mapreduce:MapReduceJobRunner
    local = luigi.hadoop:LocalJobRunner
    emu = edx.analytics.tasks.mapreduce:EmulatedMapReduceJobRunner
