[metadata]
name = edx.analytics.tasks
description-file = README.md

[global]
setup-hooks = pbr.hooks.setup_hook

[pbr]
skip_authors = True
skip_changelog = True

[files]
packages =
    edx
data_files =
    share/edx.analytics.tasks = share/*

[entry_points]
console_scripts =

    # launchers
    launch-task = edx.analytics.tasks.launchers.local:main
    remote-task = edx.analytics.tasks.launchers.remote:main

    # tools
    analyze-log = edx.analytics.tasks.tools.analyze.main:analyze
    s3util = edx.analytics.tasks.tools.s3util:main
    obfuscate-eval = edx.analytics.tasks.tools.obfuscate_eval:main
    debug-emr-logs = edx.analytics.tasks.tools.debug_emr_logs:main

edx.analytics.tasks =

    # common
    sqoop-import = edx.analytics.tasks.common.sqoop:SqoopImportFromMysql
    insert-into-table = edx.analytics.tasks.common.mysql_load:MysqlInsertTask
    snowflake-load = edx.analytics.tasks.common.snowflake_load:SnowflakeLoadTask

    # insights
    answer-dist = edx.analytics.tasks.insights.answer_dist:AnswerDistributionPerCourse
    calendar = edx.analytics.tasks.insights.calendar_task:CalendarTableTask
    course_blocks = edx.analytics.tasks.insights.course_blocks:CourseBlocksApiDataTask
    course_list = edx.analytics.tasks.insights.course_list:CourseListApiDataTask
    database-import = edx.analytics.tasks.insights.database_imports:ImportAllDatabaseTablesTask
    engagement = edx.analytics.tasks.insights.module_engagement:ModuleEngagementDataTask
    enrollments = edx.analytics.tasks.insights.enrollments:ImportEnrollmentsIntoMysql
    location-per-course = edx.analytics.tasks.insights.location_per_course:LastCountryOfUser
    problem_response = edx.analytics.tasks.insights.problem_response:LatestProblemResponseDataTask
    tags-dist = edx.analytics.tasks.insights.tags_dist:TagsDistributionPerCourse
    user-activity = edx.analytics.tasks.insights.user_activity:InsertToMysqlCourseActivityTask
    video = edx.analytics.tasks.insights.video:InsertToMysqlAllVideoTask

    # data_api
    grade-dist = edx.analytics.tasks.data_api.studentmodule_dist:GradeDistFromSqoopToMySQLWorkflow
    student_engagement = edx.analytics.tasks.data_api.student_engagement:StudentEngagementTask

    # warehouse:
    load-internal-database = edx.analytics.tasks.warehouse.load_internal_reporting_database:LoadMysqlTableFromS3ToSnowflakeTask

    # export:
    data_obfuscation   = edx.analytics.tasks.export.data_obfuscation:ObfuscatedCourseDumpTask
    dump-student-module = edx.analytics.tasks.export.database_exports:StudentModulePerCourseTask
    events_obfuscation = edx.analytics.tasks.export.events_obfuscation:ObfuscateCourseEventsTask
    export-events = edx.analytics.tasks.export.event_exports:EventExportTask
    export-events-by-course = edx.analytics.tasks.export.event_exports_by_course:EventExportByCourseTask
    export-student-module = edx.analytics.tasks.export.database_exports:StudentModulePerCourseAfterImportWorkflow
    obfuscation = edx.analytics.tasks.export.obfuscation:ObfuscatedCourseTask

    # monitor:
    all_events_report = edx.analytics.tasks.monitor.total_events_report:TotalEventsReportWorkflow
    enrollment_validation = edx.analytics.tasks.monitor.enrollment_validation:CourseEnrollmentValidationTask
    overall_events = edx.analytics.tasks.monitor.overall_events:TotalEventsDailyTask
    noop = edx.analytics.tasks.monitor.performance:ParseEventLogPerformanceTask

    # enterprise:
    enterprise_enrollments = edx.analytics.tasks.enterprise.enterprise_enrollments:ImportEnterpriseEnrollmentsIntoMysql
    enterprise_user = edx.analytics.tasks.enterprise.enterprise_user:ImportEnterpriseUsersIntoMysql

mapreduce.engine =
    hadoop = edx.analytics.tasks.common.mapreduce:MapReduceJobRunner
    local = luigi.contrib.hadoop:LocalJobRunner
    emu = edx.analytics.tasks.common.mapreduce:EmulatedMapReduceJobRunner

[pycodestyle]
ignore=E501,E731
max_line_length=119
